--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-4 col-sm-6 col-s-12">
+            <div class="card">
+                <img class="card-img-top" src="https://images.unsplash.com/photo-1560177112-fbfd5fde9566?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Corona Virus</h5>
+                    <p class="card-text">News description</p>
+                    <a href="#" class="btn btn-danger">Read nore</a>
+                </div>
+            </div>
+        </div>
         
     </div>
 </body>
