Added contact form

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Android Technologies</h5>
                     <p class="card-text">News description</p>
-                    <a href="#" class="btn btn-danger">Read More</a>
+                    <a href="posts.html" class="btn btn-danger">Read More</a>
                 </div>
             </div>
         </div>
