--- a/posts.html
+++ b/posts.html
@@ -61,6 +61,33 @@
                 </div>
             </div>
         </div>
+        <!--Contact Form-->
+        <div class="row mt-5">
+            <div class="col-md-8">
+                <h4 class="text-center">Contact Me</h4>
+                <hr>
+                <form action="">
+                    <div class="form-group">
+                        <label for="">Full Name</label>
+                        <input type="text" class="form-control" placeholder="Your name">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Email</label>
+                        <input type="text" class="form-control" placeholder="Your email">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Phone</label>
+                        <input type="text" class="form-control" placeholder="Your phone number">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Message</label>
+                        <textarea name="" id="" cols="30" rows="10" class="textarea form-control" placeholder="Your message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-danger btn-lg btn-block">Submit</button>
+                </form>
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
