--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Web Technologies</h5>
                     <p class="card-text">News description</p>
-                    <a href="#" class="btn btn-danger">Read more</a>
+                    <a href="posts.html" class="btn btn-danger">Read more</a>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Corona Virus</h5>
                     <p class="card-text">News description</p>
-                    <a href="#" class="btn btn-danger">Read nore</a>
+                    <a href="posts.html" class="btn btn-danger">Read nore</a>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat vestibulum lectus mauris ultrices eros in cursus turpis. Nullam non nisi est sit amet facilisis magna. Leo in vitae turpis massa sed elementum tempus. Elit sed vulputate mi sit amet mauris commodo quis imperdiet. Scelerisque varius morbi enim nunc. Elementum integer enim neque volutpat ac tincidunt. Cras tincidunt lobortis feugiat vivamus. Vitae ultricies leo integer malesuada nunc vel. Faucibus in ornare quam viverra orci sagittis eu volutpat odio. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Ut venenatis tellus in metus vulputate eu scelerisque felis imperdiet</p>
                 </div>
                 <div class="col-md-12">
-                    <a href="#" class="btn btn-danger">Read more</a>
+                    <a href="posts.html" class="btn btn-danger">Read more</a>
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat vestibulum lectus mauris ultrices eros in cursus turpis. Nullam non nisi est sit amet facilisis magna. Leo in vitae turpis massa sed elementum tempus. Elit sed vulputate mi sit amet mauris commodo quis imperdiet. Scelerisque varius morbi enim nunc. Elementum integer enim neque volutpat ac tincidunt. Cras tincidunt lobortis feugiat vivamus. Vitae ultricies leo integer malesuada nunc vel. Faucibus in ornare quam viverra orci sagittis eu volutpat odio. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Ut venenatis tellus in metus vulputate eu scelerisque felis imperdiet</p>
                 </div>
                 <div class="col-md-12">
-                    <a href="#" class="btn btn-danger">Read more</a>
+                    <a href="posts.html" class="btn btn-danger">Read more</a>
                 </div>
             </div>
         </div>
@@ -141,7 +141,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat vestibulum lectus mauris ultrices eros in cursus turpis. Nullam non nisi est sit amet facilisis magna. Leo in vitae turpis massa sed elementum tempus. Elit sed vulputate mi sit amet mauris commodo quis imperdiet. Scelerisque varius morbi enim nunc. Elementum integer enim neque volutpat ac tincidunt. Cras tincidunt lobortis feugiat vivamus. Vitae ultricies leo integer malesuada nunc vel. Faucibus in ornare quam viverra orci sagittis eu volutpat odio. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Ut venenatis tellus in metus vulputate eu scelerisque felis imperdiet</p>
                 </div>
                 <div class="col-md-12">
-                    <a href="#" class="btn btn-danger">Read more</a>
+                    <a href="posts.html" class="btn btn-danger">Read more</a>
                 </div>
             </div>
         </div>
@@ -161,12 +161,13 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat vestibulum lectus mauris ultrices eros in cursus turpis. Nullam non nisi est sit amet facilisis magna. Leo in vitae turpis massa sed elementum tempus. Elit sed vulputate mi sit amet mauris commodo quis imperdiet. Scelerisque varius morbi enim nunc. Elementum integer enim neque volutpat ac tincidunt. Cras tincidunt lobortis feugiat vivamus. Vitae ultricies leo integer malesuada nunc vel. Faucibus in ornare quam viverra orci sagittis eu volutpat odio. Dolor sit amet consectetur adipiscing elit ut aliquam purus. Ut venenatis tellus in metus vulputate eu scelerisque felis imperdiet</p>
                 </div>
                 <div class="col-md-12">
-                    <a href="#" class="btn btn-danger">Read more</a>
+                    <a href="posts.html" class="btn btn-danger">Read more</a>
                 </div>
             </div>
         </div>
 
         
     </div>
+    
 </body>
 </html>
