--- a/posts.html
+++ b/posts.html
@@ -7,11 +7,14 @@
 
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--Bootstrap js-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 </head>
 <body>
     <div class="container">
@@ -62,7 +65,7 @@
             </div>
         </div>
         <!--Contact Form-->
-        <div class="row mt-5">
+        <div class="row mt-5 mb-5">
             <div class="col-md-8">
                 <h4 class="text-center">Contact Me</h4>
                 <hr>
@@ -89,5 +92,17 @@
             
         </div>
     </div>
+    <footer>
+        <div class="social-links">
+            
+            <p>Follow Me</p>
+            <a href="https://github.com/DanielWaiguru91"><i class="fab fa-github-square"></i></a>
+            <a href="https://www.facebook.com/danny.dannytoz.1"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/Daniel_Waiguru"><i class="fab fa-twitter-square"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <p>All Rigths Reserved &copy; 2020</p>
+        <p class="author">Daniel Waiguru</p>
+    </footer>
 </body>
 </html>
